feat(be): analyse full process